# UltrafastSecp256k1

./: .clang-tidy  .cppcheck-suppressions  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .woodpecker.yml  .zenodo.json  ADOPTERS.md  AGENTS.md  ANNOUNCEMENT_DRAFT.md  AUDIT_COVERAGE.md  AUDIT_GUIDE.md  AUDIT_REPORT.md  BITCOIN_CORE_PR_BLOCKERS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.auditor  Dockerfile.local-ci  Dockerfile.reproducible  Doxyfile  FULL_AUDIT_REVIEW_2026-04-28.md  GOVERNANCE.md  GPU_TESTING_GUIDE.md  LICENSE  PORTING.md  Package.swift  README.md  RELEASE_NOTES_v3.6.0.md  RELEASE_NOTES_v3.7.0.md  RELEASE_v3.14.0.md  RISCV_OPTIMIZATIONS.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  (+27 more)
android/: CMakeLists.txt  README.md  build_android.ps1
android/test/: android_test.cpp  bench_hornet_android.cpp  libsecp_bench.c
bench/: CMakeLists.txt  README.md
bench/include/: bench_affinity.h  bench_api.h  bench_config.h  bench_report.h  bench_rng.h  bench_timer.h
bench/scripts/: build.ps1  build.sh  run.ps1  run.sh
bench/src/: bench_config.cpp  main.cpp
bench/src/providers/: provider_libsecp.cpp  provider_uf.cpp
bindings/android/: CMakeLists.txt  README.md  build_android.sh
bindings/android/example/: build.gradle.kts
bindings/android/jni/: secp256k1_jni.cpp
bindings/android/test/: android_test.cpp
bindings/python/: README.md  pyproject.toml  pyproject.ufsecp.toml
bindings/python/tests/: smoke_test.py
bindings/python/ufsecp/: __init__.py
bindings/python/ultrafast_secp256k1/: _ffi.py
bindings/rust/ultrafast-secp256k1/: Cargo.toml
bindings/rust/ultrafast-secp256k1-sys/: Cargo.toml
ci/fixtures/pr353_msvc_link_retention/: CMakeLists.txt  anchor.cpp  main.cpp
compat/libbitcoin_bridge/: CMakeLists.txt  README.md
compat/libbitcoin_bridge/bench/: bench_lbtc_batch.cpp
compat/libbitcoin_bridge/example/: lbtc_batch_demo.cpp
compat/libbitcoin_bridge/include/: ufsecp_libbitcoin.h
compat/libbitcoin_bridge/src/: ufsecp_libbitcoin.cpp
compat/libbitcoin_bridge/tests/: test_lbtc_bridge.cpp  test_lbtc_collect.cpp  test_lbtc_commitment.cpp  test_lbtc_consensus_diff.cpp  test_lbtc_multisig_threshold.cpp
compat/libbitcoin_direct/: CMakeLists.txt  README.md
compat/libbitcoin_direct/bench/: bench_direct_batch.cpp  bench_hash256_var.cpp  bench_public_ops.cpp  bench_workloads.cpp
compat/libbitcoin_direct/examples/: public_ops_example.cpp
compat/libsecp256k1_bchn_shim/: CMakeLists.txt  README.md
compat/libsecp256k1_shim/: CMakeLists.txt  README.md  libsecp256k1.pc.in
cpu/: CMakeLists.txt
cpu/bench/: bench_adaptive_glv.cpp  bench_atomic_operations.cpp  bench_bip324.cpp  bench_bip352_cpu.cpp  bench_comprehensive_riscv.cpp  bench_ct.cpp  bench_dlc.cpp  bench_ecdsa_multiscalar.cpp  bench_field_26.cpp  bench_field_52.cpp  bench_field_mul_kernels.cpp  bench_glv_decomp_profile.cpp  bench_hornet.cpp  bench_hotpaths.cpp  bench_jsf_vs_shamir.cpp  bench_scalar_mul.cpp  bench_unified.cpp  libsecp_bench.c  libsecp_provider.c
cpu/fuzz/: fuzz_point.cpp  fuzz_scalar.cpp
cpu/include/: UltrafastSecp256k1.hpp
cpu/src/: adaptor.cpp  address.cpp  batch_add_affine.cpp  batch_verify.cpp  bip32.cpp  bip324.cpp  bip39.cpp  chacha20_poly1305.cpp  coin_hd.cpp  ct_field.cpp  ct_point.cpp  ct_scalar.cpp  ct_sign.cpp  ecdh.cpp  ecdsa.cpp  ecies.cpp  ecmult_gen_comb.cpp  ellswift.cpp  eth_signing.cpp  ethereum.cpp  field.cpp  field_26.cpp  field_52.cpp  field_asm.cpp  field_asm_arm64.cpp  field_asm_riscv64.S  field_asm_riscv64.cpp  field_asm_x64_gas.S  field_simd.cpp  frost.cpp  glv.cpp  hash_accel.cpp  hkdf.cpp  keccak256.cpp  message_signing.cpp  multiscalar.cpp  musig2.cpp  pedersen.cpp  pippenger.cpp  platform_compat.h  (+12 more)
cpu/tests/: bench_kP.cpp  diag_scalar_mul.cpp  run_selftest.cpp  test_arithmetic_correctness.cpp  test_batch_add_affine.cpp  test_bip32.cpp  test_bip32_vectors.cpp  test_bip340_strict.cpp  test_bip340_vectors.cpp  test_bip39.cpp  test_coins.cpp  test_comprehensive.cpp  test_ct.cpp  test_ct_equivalence.cpp  test_ecc_properties.cpp  test_ecdh_recovery_taproot.cpp  test_ecdsa_schnorr.cpp  test_ethereum.cpp  test_exhaustive.cpp  test_ffi_coverage.cpp  test_field_26.cpp  test_field_52.cpp  test_hash_accel.cpp  test_large_scalar_multiplication.cpp  test_mul.cpp  test_multiscalar_batch.cpp  test_musig2.cpp  test_point_edge_cases.cpp  test_rfc6979_vectors.cpp  test_simd_batch.cpp  test_v4_features.cpp  test_wallet.cpp  test_zk.cpp
cuda/: CMakeLists.txt  README.md
cuda/include/: affine_add.cuh  bip324.cuh  ecdh.cuh  ecdsa.cuh  gpu_occupancy.cuh  msm.cuh  pedersen.cuh  recovery.cuh  schnorr.cuh  search_cpu_identical.cuh  search_simple.cuh  secp256k1.cuh  secp256k1_32.cuh  secp256k1_32_hybrid_final.cuh  zk.cuh
cuda/src/: bench_bip324_transport.cu  bench_bip352.cu  bench_compare.cu  bench_cuda.cu  gpu_audit_runner.cu  secp256k1.cu  test_suite.cu
examples/: CMakeLists.txt  README.md
examples/basic_usage/: main.cpp
examples/esp32_bench_hornet/: CMakeLists.txt  capture_bench.py  sdkconfig  sdkconfig.defaults  sdkconfig.old
examples/esp32_test/: CLION_SETUP.md  CMakeLists.txt  ESP32_PLUGIN_QUICK_START.md  README.md  release_com3.ps1
examples/esp32c6_bench_hornet/: sdkconfig  sdkconfig.defaults
examples/esp32p4_bench_hornet/: sdkconfig  sdkconfig.defaults
examples/eth_zk_layer/: activate.html  main.cpp  node_server.py
examples/signing_demo/: main.cpp
examples/stm32_test/: CMakeLists.txt  README.md  STM32F103ZET6.ld  build_stm32.ps1  flash_and_run.py  flash_stm32.ps1  go_and_monitor.py  main.cpp  monitor.py  startup_stm32f103ze.cpp  syscalls.cpp
examples/threshold_demo/: main.cpp
include/ufsecp/: CMakeLists.txt  SUPPORTED_GUARANTEES.md  ufsecp.h  ufsecp256k1.h  ufsecp_cancel.h  ufsecp_error.h  ufsecp_gpu.h  ufsecp_gpu_impl.cpp  ufsecp_impl.cpp  ufsecp_version.h  ufsecp_version.h.in
src/bch/: CMakeLists.txt
src/bch/src/: rpa.cpp  (+1 more)
src/cuda/: CMakeLists.txt
src/gpu/: CMakeLists.txt
wasm/: CMakeLists.txt  README.md  bench_wasm.mjs  package.json
(+3388 files in other folders)
